# IFC-to-gbXML-converter

./: .gitignore  IFC_gbXML_Convert.py  README.md  ifcgbxml.py  pyproject.toml
tests/: conftest.py  test_basic.py
